--- a/SWO-Book-Store-BE/appsettings.json
+++ b/SWO-Book-Store-BE/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=LAPTOP-AB2AIDMG;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DevConnection": "Server=tcp:swo-bookstore.database.windows.net,1433;Initial Catalog=swo-db;Persist Security Info=False;User ID=swo-user;Password=SoftOne@2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
