--- a/SWO-Book-Store-BE/appsettings.json
+++ b/SWO-Book-Store-BE/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DevConnection": "Server=tcp:swo-bookstore.database.windows.net,1433;Initial Catalog=swo-db;Persist Security Info=False;User ID=swo-user;Password=SoftOne@2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "DevConnection": "server=swo-db.mysql.database.azure.com;uid=swouser;pwd=SoftOne@2024;database=swo-db"
+    "DevConnection": "server=localhost;uid=root;pwd=123456;database=swo-db"
   }
 }
